--- a/hello-typeorm/dbos-config.yaml
+++ b/hello-typeorm/dbos-config.yaml
@@ -1,3 +1,8 @@
+# To enable auto-completion and validation for this file in VSCode, install the RedHat YAML extension
+# https://marketplace.visualstudio.com/items?itemName=redhat.vscode-yaml
+
+# yaml-language-server: $schema=https://raw.githubusercontent.com/dbos-inc/dbos-transact/main/dbos-config.schema.json
+
 database:
   hostname: 'localhost'
   port: 5432
@@ -5,4 +10,11 @@ database:
   app_db_name: 'hellotypeorm'
   password: ${PGPASSWORD}
   connectionTimeoutMillis: 3000
-  app_db_client: "typeorm"
+  app_db_client: typeorm
+  migrate:
+    - npx knex migrate:latest
+  rollback:
+    - npx knex migrate:rollback
+runtimeConfig:
+  entrypoints:
+    - dist/src/operations.js
