--- a/hello-typeorm/dbos-config.yaml
+++ b/hello-typeorm/dbos-config.yaml
@@ -12,9 +12,9 @@ database:
   connectionTimeoutMillis: 3000
   app_db_client: typeorm
   migrate:
-    - npx knex migrate:latest
+    - npx typeorm migration:run -d dist/datasource.js
   rollback:
-    - npx knex migrate:rollback
+    - npx typeorm migration:revert -d dist/datasource.js
 runtimeConfig:
   entrypoints:
     - dist/src/operations.js
