--- a/hello-typeorm/tsconfig.json
+++ b/hello-typeorm/tsconfig.json
@@ -16,8 +16,10 @@
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
   "include": [                                           /* Specifies an array of filenames or patterns to include in the program. */
+    "datasource.ts",  
     "src",
     "entities",
+    "migrations",
   ],
   "exclude": [
     "**/*.test.ts",
